--- a/index.html
+++ b/index.html
@@ -2,13 +2,16 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Saif | Aspiring Medical Scientist</title>
-  <link rel="stylesheet" href="styles.css"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Saif | Medical Laboratory Science Graduate</title>
+  <meta name="description" content="Saif is a Medical Laboratory Science graduate with interests in clinical diagnostics and research, seeking opportunities in hospitals and research labs." />
+  <meta name="keywords" content="Saif, Medical Lab Scientist, Laboratory Science Graduate, Clinical Diagnostics, Lab Research, Portfolio, Saif Scientist" />
+  <meta name="author" content="Saif" />
+  <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
   <header>
-    <h1>Saif</h1>
+    <h1>Saif – Medical Laboratory Science Graduate</h1>
     <p>Aspiring Medical Scientist</p>
     <nav>
       <a href="#about">About</a>
