--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Saif | Medical Laboratory Science Graduate</title>
+  <title>Saif |  Exploring Science Through the Microscope</title>
   <meta name="description" content="Saif is a Medical Laboratory Science graduate with interests in clinical diagnostics and research, seeking opportunities in hospitals and research labs." />
   <meta name="keywords" content="Saif, Medical Lab Scientist, Laboratory Science Graduate, Clinical Diagnostics, Lab Research, Portfolio, Saif Scientist" />
   <meta name="author" content="Saif" />
@@ -47,3 +47,4 @@
   </footer>
 </body>
 </html>
+
