--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
   <header>
-    <h1>Saif – Medical Laboratory Science Graduate</h1>
+    <h1>Saif –  Exploring Science Through the Microscope</h1>
     <p>Aspiring Medical Scientist</p>
     <nav>
       <a href="#about">About</a>
@@ -47,4 +47,5 @@
   </footer>
 </body>
 </html>
+
 
