--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title> | Exploring Science Through the Microscope</title>
+  <title> saifsci| Exploring Science Through the Microscope</title>
   <meta name="description" content="Saif is a Medical Laboratory Science graduate with interests in clinical diagnostics and research, seeking opportunities in hospitals and research labs." />
   <meta name="keywords" content="Saif, Medical Lab Scientist, Laboratory Science Graduate, Clinical Diagnostics, Lab Research, Portfolio, Saif Scientist" />
   <meta name="author" content="Saif" />
@@ -22,8 +22,7 @@
 
   <section id="about">
     <h2>About Me</h2>
-    <p>my name`s saif 
-    I’m a recent graduate in Medical Laboratory Science with strong interests in clinical diagnostics and laboratory research. I am eager to work in advanced medical laboratories and contribute to healthcare innovations.</p>
+    <p>my name is SAIF and I’m a recent graduate in Medical Laboratory Science with strong interests in clinical diagnostics and laboratory research. I am eager to work in advanced medical laboratories and contribute to healthcare innovations.</p>
   </section>
 
   <section id="skills">
@@ -48,6 +47,7 @@
   </footer>
 </body>
 </html>
+
 
 
 
