--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
   <section id="contact">
     <h2>Contact</h2>
-    <p>You can reach me via email: <a href="mailto:your.email@example.com">your.email@example.com</a></p>
+    <p>You can reach me via email: <a href="mailto:your.email@example.com">367saifkhan@gmail.com</a></p>
   </section>
 
   <footer>
@@ -49,6 +49,7 @@
   </footer>
 </body>
 </html>
+
 
 
 
