--- a/index.html
+++ b/index.html
@@ -40,15 +40,18 @@
   </section>
 
   <section id="contact">
-    <h2>Contact</h2>
-    <p>You can reach me via email: <a href="mailto:your.email@example.com">367saifkhan@gmail.com</a></p>
-  </section>
+  <h2>Contact Me</h2>
+  <p>If you'd like to get in touch, feel free to reach out by email:</p>
+  <p>📧 <a href="mailto:saifkhan@gmail.com">saifkhan@gmail.com</a></p>
+</section>
+
 
   <footer>
     <p>&copy; 2025 Saif | All rights reserved.</p>
   </footer>
 </body>
 </html>
+
 
 
 
