--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
   <section id="contact">
   <h2>Contact Me</h2>
   <p>If you'd like to get in touch, feel free to reach out by email:</p>
-  <p>📧 <a href="mailto:saifkhan@gmail.com">saifkhan@gmail.com</a></p>
+  <p>📧 <a href="mailto:367saifkhan@gmail.com">367saifkhan@gmail.com</a></p>
 </section>
 
 
@@ -51,6 +51,7 @@
   </footer>
 </body>
 </html>
+
 
 
 
