--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+ 
+  <!-- ✅ Google Site Verification Tag -->
+  <meta name="google-site-verification" content="DRCQeRyvJMTW4BKTv6jUusyDAHuQLceGupdOCDaBrQw" />
+  
   <title>saifsci | Exploring Science Through the Microscope</title>
   <meta name="description" content="Saif is a Medical Laboratory Science graduate with interests in clinical diagnostics and research, seeking opportunities in hospitals and research labs." />
   <meta name="keywords" content="Saif, Medical Lab Scientist, Laboratory Science Graduate, Clinical Diagnostics, Lab Research, Portfolio, Saif Scientist" />
@@ -51,6 +55,7 @@
   </footer>
 </body>
 </html>
+
 
 
 
